# passman-backend

./: LICENSE  MANIFEST.in  README.rst  db.sqlite3  setup.cfg
backend/: urls.py  vault_viewsets.py
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: doc.md
passmanBackend/: Dockerfile  README.md  TODO.txt  requirements.txt
passmanBackend/backend/: settings.py  urls.py  vault_serializers.py  vault_viewsets.py
passmanBackend/vault_backend/: admin.py  extra_functions.py  models.py  tests.py  views.py
passmanBackend/vault_backend/migrations/: 0001_initial.py  0002_auto_20210621_1616.py  0003_alter_vault_directory.py  0004_auto_20210625_1521.py
vault_backend/: apps.py
