[metadata]
name = backend
version = 1.0
description = A django and DRF based password manager API for local use
long_description = file: README.rst
author = SHARAN VARMA
author_email = sharanvarma0@gmail.com
license = BSD-3-Clause
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.3
    Framework :: rest_framework
    Framework :: rest_framework :: 3.12.4
    Intended Audience :: Developers
    Intended Audience :: Users
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :; Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: API

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.3
    rest_framework >= 3.12.4


